2012-06-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-proc.el (w3m-process-do-with-temp-buffer): Use labels macro again.
	Functions that the labels form generates to be used in the outside of
	the labels form should be prefixed with #' from now on.
	Thanks to Michael Heerdegen and Andreas Schwab.

	* w3m-proc.el (w3m-process-do-with-temp-buffer): Don't use labels macro
	of which the spec has been changed in the most recent Emacs.

2012-06-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-expand-url): Work for scheme name containing upcase
	letters.  Reported by Dan Jacobson <jidanni@jidanni.org>.

	* w3m-util.el (w3m-force-mode-line-update): New alias.

	* w3m-lnum.el (w3m-with-lnum, w3m-lnum-universal-dispatch): Use it.

2012-06-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-create-page): Improve regexp matching Google's click-
	tracking urls.

2012-05-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-encode-string-2): New function.
	(w3m-print-current-url, w3m-print-this-url, w3m-print-this-image-url):
	Use it to encode url characters that are apt to be misidentified as
	word boundaries.

2012-04-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-create-page): Decode url in Google's click-tracking
	filter.

2012-04-18  Andrey Kotlarski  <m00naticus@gmail.com>

	* w3m-lnum.el (w3m-with-lnum, w3m-lnum-universal-dispatch):
	Explicitly redraw mode line.
	(w3m-lnum-visit): Fix prompt; add --insecure option to Curl.

2012-04-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-create-page): Add a filter for Google's click-tracking
	temporarily --- maybe this should be incorporated in w3m-filter.el.

2012-04-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-mailto-url): Protect against nil value of body=;
	decode url string; don't change mail buffer's modification status;
	make sure body text is inserted to the message body.

2012-04-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-shr-url-at-point): New function.